--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     // Redireciona em 2 segundos
     setTimeout(function() {
-      window.location.href = "https://exemplo.com";
+      window.location.href = "https://wa.me/551151995854?text=*Olá+preciso+de+suporte+técnico*";
     }, 2000);
   </script>
 </head>
